# JaiPhysX

./: .gitignore  CMakeLists.txt  README.md  generate.jai  generate_enums.jai  justfile  module.jai  module_linux.jai  module_windows.jai  run_pxbind.sh
physx/physx-build/: CMakeLists.txt
physx/physx-sys/: Cargo.toml  build.rs
physx/physx-sys-extract/: Cargo.toml
physx/physx-sys/physx/: README.md
physx/physx-sys/physx/physx/include/: PxActor.h  PxAggregate.h  PxArticulationReducedCoordinate.h  PxBroadPhase.h  PxBuffer.h  PxConstraint.h  PxConstraintDesc.h  PxContact.h  PxFEMSoftBodyMaterial.h  PxFiltering.h  PxPBDMaterial.h  PxPBDParticleSystem.h  PxParticleBuffer.h  PxParticleSystem.h  PxPhysics.h  PxQueryFiltering.h  PxRigidBody.h  PxScene.h  PxSceneDesc.h  PxSceneQuerySystem.h  PxShape.h  PxSoftBody.h
physx/physx-sys/physx/physx/include/common/: PxBase.h
physx/physx-sys/physx/physx/include/cooking/: PxCooking.h
physx/physx-sys/physx/physx/include/extensions/: PxCustomGeometryExt.h  PxD6Joint.h  PxDefaultStreams.h  PxDistanceJoint.h  PxGjkQueryExt.h  PxRigidActorExt.h  PxSceneQueryExt.h  PxSerialization.h  PxTriangleMeshExt.h
physx/physx-sys/physx/physx/include/foundation/: Px.h  PxAllocator.h  PxAoS.h  PxAssert.h  PxFPU.h  PxFoundation.h  PxInlineAoS.h  PxMat33.h  PxMat34.h  PxMat44.h  PxMath.h  PxPreprocessor.h  PxQuat.h  PxSocket.h  PxThread.h  PxTime.h  PxTransform.h  PxUtilities.h  PxVec2.h  PxVec3.h  PxVec4.h  PxVecMath.h  PxVecQuat.h  PxVecTransform.h
physx/physx-sys/physx/physx/include/foundation/unix/: PxUnixTrigConstants.h
physx/physx-sys/physx/physx/include/foundation/unix/neon/: PxUnixNeonInlineAoS.h
physx/physx-sys/physx/physx/include/foundation/unix/sse2/: PxUnixSse2AoS.h
physx/physx-sys/physx/physx/include/foundation/windows/: PxWindowsInlineAoS.h  PxWindowsIntrinsics.h
physx/physx-sys/physx/physx/include/geometry/: PxBVH.h  PxCustomGeometry.h  PxGeometryHit.h  PxGeometryQuery.h  PxGeometryQueryFlags.h
physx/physx-sys/physx/physx/include/pvd/: PxPvdSceneClient.h
physx/physx-sys/physx/physx/include/solver/: PxSolverDefs.h
physx/physx-sys/physx/physx/include/vehicle/: PxVehicleWheels.h
physx/physx-sys/physx/physx/source/foundation/: FdFoundation.cpp  FdFoundation.h
physx/physx-sys/physx/physx/source/foundation/unix/: FdUnixFPU.cpp  FdUnixMutex.cpp  FdUnixThread.cpp  FdUnixTime.cpp
physx/physx-sys/physx/physx/source/foundation/windows/: FdWindowsSocket.cpp  FdWindowsSync.cpp  FdWindowsThread.cpp  FdWindowsTime.cpp
physx/physx-sys/physx/physx/source/geomutils/src/: GuBVH.cpp  GuBVH.h  GuGeometryQuery.cpp  GuQuerySystem.cpp
physx/physx-sys/physx/physx/source/geomutils/src/convex/: GuBigConvexData.cpp
physx/physx-sys/physx/physx/source/geomutils/src/cooking/: GuCookingBigConvexDataBuilder.cpp
physx/physx-sys/physx/physx/source/immediatemode/src/: NpImmediateMode.cpp
physx/physx-sys/physx/physx/source/physx/src/: NpPvdSceneClient.cpp  PvdMetaDataPvdBinding.h
physx/physx-sys/physx/physx/source/physxcharacterkinematic/src/: CctCharacterController.h
physx/physx-sys/physx/physx/source/physxextensions/src/: ExtSqQuery.cpp
physx/physx-sys/physx/physx/source/physxextensions/src/serialization/: SnSerialUtils.cpp
physx/physx-sys/physx/physx/source/physxextensions/src/serialization/Xml/: SnXmlMemoryPool.h
physx/physx-sys/physx/physx/source/physxmetadata/core/src/: PxAutoGeneratedMetaDataObjects.cpp  PxMetaDataObjects.cpp
physx/physx-sys/physx/physx/source/physxvehicle/src/: PxVehicleUpdate.cpp
physx/physx-sys/physx/physx/source/scenequery/src/: SqQuery.cpp
physx/physx-sys/pxbind/: Cargo.toml
physx/physx-sys/pxbind/src/: consumer.rs  dump.rs  generator.rs  main.rs
physx/physx-sys/pxbind/src/consumer/: record.rs
physx/physx-sys/pxbind/src/generator/: enums.rs  functions.rs  record.rs
physx/physx-sys/src/: physx_api.cpp  physx_generated.hpp  physx_generated.rs
physx/physx-sys/src/structgen/: structgen.cpp
windows/: PhysXCharacterKinematic_static.lib  PhysXCooking_static.lib  PhysXFoundation_static.lib  PhysXVehicle2_static.lib
